# PGR-Project

./: .clang-format  .gitignore  CMakeLists.txt  stringify.cmake
doc/: PGR-doc-xrepka07.docx
libs/imgui-1.89.9/: CMakeLists.txt
src/: chessboard.cpp  chessboard.h  common.cpp  common.h  constants.h  imgui_stuff.cpp  imgui_stuff.h  main.cpp  opengl_stuff.cpp  opengl_stuff.h  sdl_stuff.cpp  sdl_stuff.h  uniforms.cpp  uniforms.h
src/camera/: README.txt  camera.h  freelook_camera.cpp  freelook_camera.h
src/shaders/: first_pass.fs  fragment_shader.fs  show_texture.fs  vertex_shader.vs
